2007-07-16  Akim Demaille  <demaille@gostai.com>

	Factor effective arguments
	* src/parser/bison/ugrammar.y (args): New.
	Use it where it factors the grammar without changing it.

2007-07-16  Akim Demaille  <demaille@gostai.com>

	Class instantiations are regular expressions
	* src/parser/bison/ugrammar.y (stmt): Move the special
	"class" instantiation to...
	(expr): here.
	The actions are still to write.

2007-07-16  Akim Demaille  <demaille@gostai.com>

	Bind shutdown and reboot
	* src/object/primitives.hh, src/object/primitives.cc
	(connection_class): New.
	(object_class_initialize): Bind to Object, not Float.
	* src/parser/bison/utoken.l (reboot, shutdown): No longer special.
	* src/parser/bison/ugrammar.y (expr): The printer should not
	evaluate.
	(stmt, lvalue, rvalue, expr): Pass the $1 where appropriate.
	* src/runner/runner.cc (CallExp): Default target is Connection.

2007-07-16  Akim Demaille  <demaille@gostai.com>

	Factor
	* src/parser/bison/ugrammar.y (new_exp): Factor the two
	implementations.

2007-07-16  Akim Demaille  <demaille@gostai.com>

	Avoid undefined values
	* src/parser/bison/ugrammar.y: Actions not defined should set
	the result to 0 to avoid stupid debugging sessions.
	(OPERATOR, OPERATOR_ID, OPERATOR_ID_PARAM, OPERATOR_VAR)
	(BINDER): Now use a Symbol for them.
	* src/parser/bison/utoken.l: Adjust their scanning.

2007-07-16  Akim Demaille  <demaille@gostai.com>

	Make first compilation easier
	* src/ast/Makefile.am: If location.hh is not generated, ask for it.
	* src/parser/bison/bison.mk (generate-parser): New, a hook for
	the previous Makefile.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	libport/Makefile.am
	* Makefile.am: Use it.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	merge -r 1269:1298 https://svn.gostai.com/svn/kernel1/trunk

	2007-07-13  Akim Demaille  <demaille@gostai.com>
	Remove incorrect nonterminal aliases
	* src/urbi/trunk/kernel1/src/parser/bison/ugrammar.y: Remove